--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jan  7 22:46:45 2004  Sanlig Badral  <badral@openmn.org>
+
+	* configure.in : Added "mn" to ALL_LINGUAS.
+
 Sun Jan  4 19:47:38 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstmain.c (main): removed rc parsing code for yellow
