--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jan  9 15:03:22 2004  Tim Janik  <timj@gtk.org>
+
+	* glib-extra.h: added G_DEFINE_TYPE() and variants, which are not
+	provided by glib versions prior to 2.4.
+
 Tue Jan  6 01:36:31 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* sfidl-parser.cc sfidl-generator.cc: Move predefined Sfi types (like
