--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 FIXMES:
+- evaluate elimination of seqid
+- fix object docu not containing plugins
 - implement auto-save feature
 - undo across midi file import is broken
 - implement (GUI for) locked properties
