--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jan 10 10:09:29 2004  Tim Janik  <timj@gtk.org>
+
+	* evaluator/compiler.cc: fix include.
+
 Tue Dec 23 05:46:26 2003  Tim Janik  <timj@gtk.org>
 
 	* plugins/*.c: adapted to field order changes in BSE_REGISTER_OBJECT().
