--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,11 @@
+Sat Jan 10 10:27:40 2004  Tim Janik  <timj@gtk.org>
+
+	* testsfi.c (test_threads): added simple mutex test.
+
+	* sfidl-module.cc: rename header local pixstream template to
+	inlined_pixstream() to not have the same name as the related
+	calling class method (triggered by older gcc versions).
+
 Fri Jan  9 15:03:22 2004  Tim Janik  <timj@gtk.org>
 
 	* glib-extra.h: added G_DEFINE_TYPE() and variants, which are not
